# partial-equilibrium

./: .env.example  .gitignore  MANUAL.md  MODULES.md  README.md  configure.command  pe.command  pyproject.toml  requirements.txt  run.command  vercel.json
.claude/agents/: banking-equilibrium-modeller.md  calibration-modeller.md  ets-lead-economist.md  policy-mechanism-modeller.md  reproduction-verifier.md
api/: index.py
compat/ets/engine/: joint.py  scc.py
core/backend/blocks/: catalogue.py  compile.py  decompile.py  manifest.py  validate.py
core/backend/config_io/: __init__.py  builder.py  markets.py
core/backend/core/: defaults.py  paths.py  protocols.py
core/backend/engine/: __init__.py  dispatch.py  joint.py  wiring.py
core/backend/mcp/: __init__.py  __main__.py  compact.py  models_server.py  models_tools.py  server.py  suggestions.py  tools.py
core/backend/web/: api.py
core/doc/: analysis-tools.md  data-model.md  mac-abatement.md  market-equilibrium.md  multi-year-simulation.md  reference.md
core/frontend/: vite.config.js
core/frontend/src/: app.jsx  registry.js
docs/: algorithm-overview.md  banking-equilibrium.md  blocks-composition-rules.md  feature-modules-plan.md  forward-transmission.md  invest-feedback-plan.md  invest-feedback-spec.md  joint-equilibrium.md  k-msr-vs-repo-comparison.md  multi-commodity-spec.md  vertical-slice-plan.md
examples/: banking_msr.json  build_k_msr_scenarios.py  competitive_basic.json  joint_investment.json  joint_oscillating.json  joint_two_market.json  k_msr_A_reserve_price.json  k_msr_B_quantity_rule.json  k_msr_P0_no_reserve.json  k_msr_P1_decree_banking.json  k_msr_P1_draft_decree.json  k_msr_compare_suite.json  k_msr_lambda_regimes.json  k_msr_paper_reproduction.json  link_oneway.json  reproduce_k_msr.py  rps_rec.json  showcase_two_market_link.json  steel_carbon_joint.json
frontend/src/: app.jsx
frontend/src/components/: AppShared.jsx  AppViews.jsx  GuideView.jsx  ParticipantPanel.jsx  ResultPrimitives.jsx
modules/banking/backend/: __init__.py  solver.py
modules/banking/doc/: reference.md
modules/banking/frontend/: index.jsx
modules/calibration/frontend/: index.jsx
modules/cbam/doc/: reference.md
modules/cbam/frontend/: index.jsx
modules/ccr/doc/: reference.md
modules/ccr/frontend/: index.jsx
modules/competitive/doc/: reference.md
modules/elastic_baseline/doc/: reference.md
modules/elastic_baseline/frontend/: index.jsx
modules/endogenous_investment/doc/: reference.md  spec.md
modules/endogenous_investment/frontend/: index.jsx
modules/hoarding/backend/: __init__.py  plugin.py
modules/hoarding/doc/: reference.md
modules/hotelling/backend/: __init__.py  solver.py
modules/hotelling/doc/: reference.md
modules/hotelling/frontend/: index.jsx
modules/market_links/backend/: plugin.py
modules/msr/backend/: decree.py  plugin.py  rules.py  state.py
modules/msr/doc/: reference.md
modules/msr/frontend/: index.jsx
modules/nash_cournot/doc/: reference.md
modules/nash_cournot/frontend/: index.jsx
modules/oba/backend/: __init__.py  plugin.py
modules/oba/doc/: reference.md
modules/oba/frontend/: index.jsx
modules/price_controls/backend/: rules.py
modules/price_controls/doc/: reference.md
modules/price_controls/frontend/: index.jsx
src/ets/: __init__.py  ccr.py  cli.py  config.py  costs.py  expectations.py  hotelling.py  msr.py  nash.py  simulation.py
src/pe/: model_store.py
tests/: test_banking.py  test_cap_rule_injection.py  test_elastic_baseline_overlay.py  test_f6_reporting_invariant.py  test_feedback_option_a.py  test_golden_baselines.py  test_investment_trigger.py  test_joint_examples.py  test_module_isolation.py  test_paper_appendix_b.py  test_policy_events.py  test_reporting_columns.py  test_shim_deprecations.py  test_supply_rule_injection.py  test_transmission.py
tests/baselines/: MANIFEST.json  banking_msr.json  competitive_basic.json  joint_investment.json  joint_oscillating.json  joint_two_market.json  link_oneway.json  rps_rec.json  showcase_two_market_link.json  steel_carbon_joint.json
tests/config_io/: test_investment_config.py  test_multi_market_schema.py
tests/core/: test_adoption_contracts.py  test_negative_cost_mac.py  test_paths.py  test_producer.py  test_product_clearing.py  test_reporting_columns.py
tests/engine/: test_joint.py  test_joint_dispatch.py  test_joint_investment.py  test_lazy_activation.py  test_multi_market.py  test_policy_events.py
tests/examples/: test_two_market_link.py
tests/fixtures/: minimal_auction_scenario.json  minimal_banking_scenario.json  minimal_ccr_scenario.json  minimal_msr_scenario.json  minimal_scenario.json
tests/registry/: test_config.py  test_migrate.py  test_model_store_backend_roundtrip.py  test_sqlite_backend.py  test_supabase_backend_stub.py
(+137 files in other folders)
