[project]
name = "pe"
version = "0.2.0"
description = "Emissions Trading System (ETS) modular simulation framework."
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
mcp = [
    "mcp>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# pythonpath=["src"] DROPPED (WO-0): tests import the editable-installed `pe`
# (uv sync / pip install -e). A split package is not sys.path-reconstructable.
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
# 3.12: numpy>=2.5 stubs use `type` statements that require a 3.12 target
python_version = "3.12"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.2.0",
]
